<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_20_dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/film_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20_dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/black"
        tools:text="Fight Club"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scroll_view" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/film_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/film_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground 'fight clubs' forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion."
                app:layout_constraintBottom_toTopOf="@+id/genre_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/genre_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                tools:text="@string/genre"
                app:layout_constraintBottom_toTopOf="@+id/budget_text_view"
                app:layout_constraintRight_toLeftOf="@id/film_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/film_overview" />

            <TextView
                android:id="@+id/film_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                tools:text="Drama"
                app:layout_constraintBottom_toTopOf="@+id/film_budget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/genre_text_view"
                app:layout_constraintTop_toBottomOf="@+id/film_overview" />

            <TextView
                android:id="@+id/budget_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/date_text_view"
                app:layout_constraintRight_toLeftOf="@id/film_budget"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre_text_view"
                tools:text="@string/budget" />

            <TextView
                android:id="@+id/film_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/film_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/budget_text_view"
                app:layout_constraintTop_toBottomOf="@+id/film_genre"
                tools:text="63000000$" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/duration_text_view"
                app:layout_constraintRight_toLeftOf="@id/film_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budget_text_view"
                tools:text="@string/date" />

            <TextView
                android:id="@+id/film_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/film_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/date_text_view"
                app:layout_constraintTop_toBottomOf="@+id/film_budget"
                tools:text="15.10.1999" />

            <TextView
                android:id="@+id/duration_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/rating_text_view"
                app:layout_constraintRight_toLeftOf="@id/film_duration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_text_view"
                tools:text="@string/duration" />

            <TextView
                android:id="@+id/film_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/film_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/duration_text_view"
                app:layout_constraintTop_toBottomOf="@+id/film_date"
                tools:text="2h 19m" />

            <TextView
                android:id="@+id/rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/film_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration_text_view"
                tools:text="@string/rating" />

            <TextView
                android:id="@+id/film_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/rating_text_view"
                app:layout_constraintTop_toBottomOf="@+id/film_duration"
                tools:text="8.4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>